<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center_vertical|center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wa"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/whatsapp"
                        android:src="@drawable/wa" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/lighgrey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/telp"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/telp"
                        android:src="@drawable/telp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/lighgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:clipToPadding="false"
            android:gravity="top|bottom|center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fb"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/fb"
                        android:src="@drawable/fb" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/lighgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fb"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ig"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/instagram"
                        android:src="@drawable/instagram" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/lighgrey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="top|bottom|center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/web"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/web"
                        android:src="@drawable/web" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="5dp"
                        android:background="@color/lighgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>